--- a/Rules/pt.yaml
+++ b/Rules/pt.yaml
@@ -1,7 +1,7 @@
 #PT站
 payload:
   - '+.hdtime.org'
-  - '+.m-team'
+  - '+.m-team.cc'
   - '+.nicept.net'
   - '+.pt.btschool.club'
   - '+.rousi.zip'
