--- a/Rules/emby.yaml
+++ b/Rules/emby.yaml
@@ -1,6 +1,6 @@
 #emby服
 payload:
-  - '191920.xyz'
+  - '+.emby.191920.xyz'
   - 'pub1.term.wtf'
   - 'pub3.emby.wtf'
   - 'pub1.emby.wtf'
@@ -33,7 +33,7 @@ payload:
   - 'pcmhub.org'
   - '123456789.lol'
   - 'client-sub.cloudlion.top'
-  - 'feiniu.lol'
+  - '+.efeiniu.lol'
   - 'yingshishow.xyz'
   - 'iptv.cc'
   - 'gy.meowfly.de'
@@ -43,7 +43,7 @@ payload:
   - 'lite.saturdayvideo.top'
   - 'onatoshi.114514.quest'
   - 'music.xxxh.de'
-  - 'jingzhe.pro'
+  - '+.jingzhe.pro'
   - 'media.nijigem.by'
   - 'us.nanflix.net'
   - 'alist.wenjian.de'
@@ -51,7 +51,7 @@ payload:
   - '167.235.118.41'
   - 'cf.sfcj.org'
   - 'music.mefun.org'
-  - 'wenjian.de'
+  - '+.wenjian.de'
   - 's.outong-valve.com'
   - 'ucloudhost.top'
   - 'tanhuatv.site'
@@ -59,7 +59,9 @@ payload:
   - 'liustar.click'
   - 'ws1.jellyfin.asia'
   - 'eggtartemby.itsmyduty.top'
-  - 'bangumi.ca'
+  - '+.bangumi.ca'
   - 'beebi.org'
   - 'pornemby.com'
   - 'music.makifx.com'
+  - '+.a.emby.my'
+  - '+.public.shrekmedia.org'
