--- a/Rules/emby.yaml
+++ b/Rules/emby.yaml
@@ -71,3 +71,5 @@ payload:
   - '+.emos.lol'
   - '+.13.107.138.10'
   - '+.lite.liminalnet.com'
+  - '+.link00.okemby.org'
+  - '+.link01.okemby.org'
